# NeutronCaptureGammaCascade

./: CMakeLists.txt  README.md  a.out  cascade  cascade.cc  main  main.cc  plot_spectrum.py
ENDF/: ar40_levels.txt  ar40_neutron_capture.txt  endf.txt
arxiv/: old.cc
arxiv/Stephen/simulate_gamma_cascade/dump_ensdf/: Ar37.txt  Ar41.txt  README  dump_ensdf.py
include/: cascade.hh
results/: ar40_results_python.txt
scripts/: run_ar36_neutron_capture.sh
src/: cascade.cc  gamma_cascade.py  main.cc  test.txt
